[tool.poetry]
name = "pyenv_poetry_tox_pytest_example"
version = "0.1.0"
description = ""
authors = ["'Hasenpfote' <'Hasenpfote36@gmail.com'>"]
readme = "README.md"
packages = [{include = "pyenv_poetry_tox_pytest_example"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "<7.1.0", python = "<3.7"},
    {version = "^7.1.0", python = "^3.7"}
]
tox = "^3.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
