[tool.poetry]
name = "pyenv_poetry_tox_pytest_example"
version = "0.1.0"
description = ""
authors = ["'Hasenpfote' <'Hasenpfote36@gmail.com'>"]
readme = "README.md"
packages = [{include = "pyenv_poetry_tox_pytest_example"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "<7.0.0", python = "<3.7"},
    {version = "^7.1.0", python = "^3.7"}
]

tox = [
    {version = "<4.0.0", python = "<3.7", platform = "!=win32"},
    {version = "^4.0.0", python = "^3.7", platform = "!=win32"},
    {version = "<4.0.0", platform = "win32"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
