[tool.poetry]
name = "pyenv_poetry_tox_pytest_example"
version = "0.1.0"
description = ""
authors = ["'Hasenpfote' <'Hasenpfote36@gmail.com'>"]
readme = "README.md"
packages = [{include = "pyenv_poetry_tox_pytest_example"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = [
    {version = "^22.10.0", python = "^3.7"},
    {version = "<22.10.0", python = ">=3.6.2,<3.7"},
    {version = "<21.4b0", python = "<3.6.2"}
]
isort = [
    {version = "^5.9.0", python = "^3.6.1"},
    {version = "<5.9.0", python = "<3.6.1"}
]
pytest = [
    {version = "^7.1.0", python = "^3.7"},
    {version = "<7.0.0", python = "<3.7"}
]
tox = [
    {version = "^4.0.0", python = "^3.7", platform = "!=win32"},
    {version = "<4.0.0", python = "<3.7", platform = "!=win32"},
    {version = "<4.0.0", platform = "win32"},
]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
